Renaming taglibs.xml to components.xml

--- a/build.properties
+++ b/build.properties
@@ -15,7 +15,7 @@
 ## Alloy Documentation Transformer
 ##
 
-	transformer.input.json=${project.dir}/raw.json
+	transformer.input.json=${project.dir}/alloy_docs.json
 	transformer.output.xml=${project.dir}/components.xml
 
 	transformer.components.excluded=\
@@ -60,7 +60,7 @@
 
 	tagbuilder.output.dir=${generator.output.dir}/taglibs
 
-	tagbuilder.components.xml=${project.dir}/taglibs.xml,${project.dir}/taglibs-util.xml,${project.dir}/taglibs-ext.xml,${project.dir}/taglibs-liferay.xml
+	tagbuilder.components.xml=${project.dir}/components.xml
 	tagbuilder.copyright.year=2013
 	tagbuilder.docroot.dir=${tagbuilder.output.dir}/alloy-web/docroot/
 	tagbuilder.java.dir=${tagbuilder.output.dir}/alloy-taglib/src/com/liferay/alloy/taglib/
