--- a/build.properties
+++ b/build.properties
@@ -53,7 +53,15 @@
 		TreeNodeCheck,\
 		TreeNodeIO,\
 		TreeNodeRadio
-		
+
+##
+## Faces Builder
+##
+
+	builder.faces.output.dir=${generator.output.dir}/faces
+	builder.faces.components.definitions=${project.dir}/components.xml
+	builder.faces.version=1.0
+
 ##
 ## Taglib Builder
 ##
