Better namespacing for properties

--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,9 @@
 ## General
 ##
 
-	generator.output.dir=${basedir}/build
+	builder.components.definitions=${project.dir}/components.xml
+	builder.copyright.year=2013
+	builder.output.dir=${basedir}/build
 
 ##
 ## Alloy Documentation Transformer
@@ -58,26 +60,22 @@
 ## Faces Builder
 ##
 
-	builder.faces.output.dir=${generator.output.dir}/faces
-	builder.faces.components.definitions=${project.dir}/components.xml
+	builder.faces.output.dir=${builder.output.dir}/faces
 	builder.faces.version=1.0
 
 ##
-## Taglib Builder
+## Taglibs Builder
 ##
 
-	tagbuilder.output.dir=${generator.output.dir}/taglibs
-
-	tagbuilder.components.xml=${project.dir}/components.xml
-	tagbuilder.copyright.year=2013
-	tagbuilder.docroot.dir=${tagbuilder.output.dir}/alloy-web/docroot/
-	tagbuilder.java.dir=${tagbuilder.output.dir}/alloy-taglib/src/com/liferay/alloy/taglib/
-	tagbuilder.java.package=com.liferay.alloy.taglib
-	tagbuilder.jsp.common.init.path=/html/taglib/taglib-init.jsp
-	tagbuilder.jsp.dir=/html/taglib/
-	tagbuilder.taglib.xml=${project.dir}/taglibs.xml
-	tagbuilder.templates.dir=com/liferay/alloy/tools/builder/templates/taglib/
-	tagbuilder.tld.dir=${tagbuilder.output.dir}/alloy-taglib/src/META-INF/
+	builder.taglibs.docroot.dir=${builder.taglibs.output.dir}/alloy-web/docroot/
+	builder.taglibs.java.dir=${builder.taglibs.output.dir}/alloy-taglib/src/com/liferay/alloy/taglib/
+	builder.taglibs.java.package=com.liferay.alloy.taglib
+	builder.taglibs.jsp.common.init.path=/html/taglib/taglib-init.jsp
+	builder.taglibs.jsp.dir=/html/taglib/
+	builder.taglibs.output.dir=${builder.output.dir}/taglibs
+	builder.taglibs.taglib.xml=${project.dir}/taglibs.xml
+	builder.taglibs.templates.dir=com/liferay/alloy/tools/builder/templates/taglib/
+	builder.taglibs.tld.dir=${builder.taglibs.output.dir}/alloy-taglib/src/META-INF/
 
 ##
 ## Server Type
