Loading properties from properties file instead of system properties

--- a/build.properties
+++ b/build.properties
@@ -6,12 +6,18 @@
 ##
 
 ##
+## Configuration
+##
+
+	include-and-override=${build-ext}
+
+##
 ## General
 ##
 
-	builder.components.definitions=${project.dir}/components.xml
+	builder.components.definitions=./components.xml
 	builder.copyright.year=2013
-	builder.output.dir=${basedir}/build
+	builder.output.dir=./build
 
 ##
 ## Alloy Documentation Transformer
