--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,35 @@
 			<version>1.6.1</version>
 		</dependency>
 		<dependency>
+			<groupId>easyconf</groupId>
+			<artifactId>easyconf</artifactId>
+			<version>0.9.5</version>
+		</dependency>
+
+		<!-- [FIX] See http://jira.codehaus.org/browse/MEV-603 -->
+			<!-- xdoclet-1.2.1 referenced by easyconf-0.9.5 is missing -->
+			<dependency>
+				<groupId>xdoclet</groupId>
+				<artifactId>xdoclet</artifactId>
+				<version>1.2.3</version>
+			</dependency>
+
+			<!-- xdoclet-web-module-1.2.1 referenced by easyconf-0.9.5 is missing -->
+			<dependency>
+				<groupId>xdoclet</groupId>
+				<artifactId>xdoclet-web-module</artifactId>
+				<version>1.2.3</version>
+			</dependency>
+
+			<!-- xpp3_min-1.1.3.4.I referenced by easyconf-0.9.5 is missing -->
+			<dependency>
+				<groupId>xpp3</groupId>
+				<artifactId>xpp3_min</artifactId>
+				<version>1.1.3.4.O</version>
+			</dependency>
+		<!-- [/FIX] -->
+
+		<dependency>
 			<groupId>net.sf.flexjson</groupId>
 			<artifactId>flexjson</artifactId>
 			<version>3.1</version>
@@ -81,7 +110,7 @@
 				<version>2.5</version>
 				<executions>
 					<execution>
-						<id>copy-resources</id>
+						<id>copy-templates</id>
 						<phase>validate</phase>
 						<goals>
 							<goal>copy-resources</goal>
@@ -91,6 +120,24 @@
 							<resources>
 								<resource>
 									<directory>${basedir}/generator/src/com/liferay/alloy/tools/builder/templates</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-properties</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/generator/classes</outputDirectory>
+							<resources>
+								<resource>
+									<directory>.</directory>
+									<includes>
+										<include>*.properties</include>
+									</includes>
 								</resource>
 							</resources>
 						</configuration>
