Building classes to generator/classes instead of build/classes

--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 	</properties>
 	<build>
 		<sourceDirectory>${basedir}/generator/src</sourceDirectory>
-		<outputDirectory>build/classes</outputDirectory>
+		<outputDirectory>${basedir}/generator/classes</outputDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -116,7 +116,7 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${basedir}/build/classes/com/liferay/alloy/tools/builder/templates</outputDirectory>
+							<outputDirectory>${basedir}/generator/classes/com/liferay/alloy/tools/builder/templates</outputDirectory>
 							<resources>
 								<resource>
 									<directory>${basedir}/generator/src/com/liferay/alloy/tools/builder/templates</directory>
