Fixing build.properties paths

--- a/build.properties
+++ b/build.properties
@@ -23,8 +23,8 @@
 ## Alloy Documentation Transformer
 ##
 
-	transformer.input.json=${project.dir}/alloy_docs.json
-	transformer.output.xml=${project.dir}/components.xml
+	transformer.input.json=./alloy_docs.json
+	transformer.output.xml=./components.xml
 
 	transformer.components.excluded=
 
