Adding default property for default parent class for faces

--- a/build.properties
+++ b/build.properties
@@ -112,6 +112,7 @@
 ## Faces Builder
 ##
 
+	builder.faces.component.default.parent.class=javax.faces.component.UIComponentBase
 	builder.faces.output.dir=${builder.output.dir}/faces
 	builder.faces.taglib.xml.output.dir=${builder.faces.output.dir}
 	builder.faces.version=1.0
